--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -77,3 +77,6 @@ ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
 
+[/Script/Engine.GarbageCollectionSettings]
+gc.TimeBetweenPurgingPendingKillObjects=10.000000
+
